--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,25 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles/styles.css') }}"
     />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
   </head>
   <body>
     <div class="container">
+      <img
+        src="{{ url_for('static', filename='iconbig.png') }}"
+        alt="Your Image"
+        style="
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: calc(100% / 6);
+        "
+      />
+
       <h1 class="title">SummaVid</h1>
-      <h1 class="title">💬 > 📰 > 📝</h1>
       <form action="/run" method="post" enctype="multipart/form-data">
         <div class="form-group">
           <label for="file">Upload file:</label>
