--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <div class="form-group">
           <label for="file">Upload file:</label>
 
-          <input type="file" name="file" id="file" required />
+          <input type="file" name="file" id="file" accept=".m4a,.mp3,.webm,.mp4,.mpga,.wav,.mpeg" required />
           Supported formats: .m4a .mp3 .webm .mp4 .mpga .wav .mpeg
         </div>
         <div class="form-group">
